<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ArrowSMS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_set_default">Set As Default</string>
    <string name="action_apns">Select APNs</string>
    
    <string name="drawer_item_action_bar">ActionBar Sample</string>
    <string name="drawer_item_about">About</string>
    <string name="drawer_item_msg">Message Fragment</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_section_header">Section Header</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_extend">ExtendActivity</string>
    <string name="title_activity_fragment">FragmentActivity</string>

    <string name="action_manifestactivity">Manifest Activity</string>
    <string name="action_extendactivity">Extended Activity</string>
    <string name="action_customactivity">Custom Activity</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="action_opensource">Open Source</string>

    <string name="aboutLibraries_description_showIcon">true</string>
    <string name="aboutLibraries_description_showVersion">true</string>
    <string name="aboutLibraries_description_text">My Custom SMS App.</string>
    <string name="drawer_item_multi">MultiDrawer</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="title_activity_nav_drawer">ArrowSMS</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quick_reply">Quick Reply</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="cancel">Cancel</string>
    <string name="messaging">Messaging</string>
    <string name="head">Bubble</string>


</resources>
