<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="300" app:showAsAction="never" />
    <item android:id="@+id/action_default_text" android:title="@string/action_set_default"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_init_apns" android:title="@string/action_apns"
        android:orderInCategory="200" app:showAsAction="never" />
    <item android:id="@+id/action_dialog" android:title="@string/show_dialog"
        android:orderInCategory="200" app:showAsAction="never" />
    <item android:id="@+id/action_msg" android:title="@string/messaging"
        android:orderInCategory="200" app:showAsAction="never" />
</menu>
